[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "md-runtime-guard"
version = "0.1.0"
description = "Runtime domain enforcement for the ABRCE invariant relational kernel"
requires-python = ">=3.8"
license = { text = "MIT" }

[project.scripts]
md-guard = "cli:main"

[tool.setuptools.packages.find]
where = ["."]